got tox to pass

--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,18 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py37
+envlist = py36
 
 [testenv]
 setenv =
   PYTHONPATH={toxinidir}
 deps =
+  # -e {toxinidir}/../xl
+  -e git+https://github.com/lino-framework/xl.git#egg=lino_xl
   pytest-cov
+
 commands =
+    inv install
     pytest --cov=lino_ciao
 
 [pytest]
