--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,11 @@ before_install:
 
 install:
   - pip install -U setuptools
-  - pip install coveralls
-  - pip install -U pytest-cov
   - pip install -e .
+  - inv install
+  - pip freeze
 
 script:
-  - inv cov --no-html
-
-after_success:
-  - coveralls
+  - inv prep
+  - inv test
+  - inv bd
