--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 install:
   - pip install -U setuptools
   - pip install -e .
+  - pip install atelier
   - inv install
   - pip freeze
 
